# seasonal-color-analysis

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
data/: .gitignore  celebrities.json  classifier_weights_v1.pt  lfw-colors.parquet  lfw_season_embeddings.parquet  lfw_season_embeddings_test.parquet  lfw_season_embeddings_train.parquet
data/embedding_projector_label_spreading/: projector_config.json
data/seasons_descriptions/: autumn.md  spring.md  summer.md  winter.md
notebooks/: face_colors.ipynb  facenet.ipynb  label_spreading.ipynb  train_classifier.ipynb
scripts/: celebrities_seasons_crawling.py  color_embedding.py  download_from_hf.sh  download_lfw_dataset.sh  face_embedding.py  lfw_embeddings.py
seasonal_color_analysis/: fe.py
seasonal_color_analysis/core/: classification.py  face_embedding.py
