[tool.poetry]
name = "season-color-analysis"
version = "0.1.0"
description = ""
authors = ["Giacomo Bubba <giacobub@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
tqdm = "^4.66.4"
click = "^8.1.7"
pyfacer = "^0.0.4"
pandas = "^2.2.2"
timm = "^1.0.7"
pyarrow = "^16.1.0"
fastparquet = "^2024.5.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
