[tool.poetry]
name = "season-color-analysis"
version = "0.1.0beta"
description = ""
authors = ["Giacomo Bubba <giacobub@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.0"
plotly = "^5.23.0"
facenet-pytorch = "^2.6.0"
timm = "^1.0.7"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
fastparquet = "^2024.5.0"
torch = {version = "2.2.2", source = "pytorch_cpu"}


[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
tqdm = "^4.66.4"
click = "^8.1.7"
pyfacer = "^0.0.4"
seaborn = "^0.13.2"
matplotlib = "^3.9.1"
notebook = "^7.2.1"
scikit-learn = "^1.5.1"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
